--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,52 +1,53 @@
 services:
-  nginx:
-    image: nginx:1.27
-    container_name: ecoride_nginx
-    ports:
-      - "8080:80"
-    volumes:
-      - ./:/var/www/html:ro
-      - ./docker/nginx/site.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - php
+    nginx:
+        image: nginx:1.27
+        container_name: ecoride_nginx
+        ports:
+            - "8080:80"
+        volumes:
+            - ./:/var/www/html:ro
+            - ./docker/nginx/site.conf:/etc/nginx/conf.d/default.conf:ro
+        depends_on:
+            - php
 
-  php:
-    build:
-      context: .
-      dockerfile: docker/php/Dockerfile
-    container_name: ecoride_php
-    working_dir: /var/www/html
-    volumes:
-      - ./:/var/www/html
-    environment:
-      APP_ENV: dev
-      APP_DEBUG: "1"
-      DATABASE_URL: "pgsql://ecoride:ecoride@postgresql:5432/ecoride"
-      MONGODB_URL: "mongodb://mongodb:27017"
-    depends_on:
-      - postgresql
-      - mongodb
+    php:
+        build:
+            context: .
+            dockerfile: docker/php/Dockerfile
+        container_name: ecoride_php
+        working_dir: /var/www/html
+        volumes:
+            - ./:/var/www/html
+        environment:
+            APP_ENV: dev
+            APP_DEBUG: "1"
+            DEFAULT_URI: "http://localhost:8080"
+            DATABASE_URL: "pgsql://ecoride:ecoride@postgresql:5432/ecoride"
+            MONGODB_URL: "mongodb://mongodb:27017"
+        depends_on:
+            - postgresql
+            - mongodb
 
-  postgresql:
-    image: postgres:16
-    container_name: ecoride_postgresql
-    environment:
-      POSTGRES_DB: ecoride
-      POSTGRES_USER: ecoride
-      POSTGRES_PASSWORD: ecoride
-    ports:
-      - "5432:5432"
-    volumes:
-      - donnees_postgresql:/var/lib/postgresql/data
+    postgresql:
+        image: postgres:16
+        container_name: ecoride_postgresql
+        environment:
+            POSTGRES_DB: ecoride
+            POSTGRES_USER: ecoride
+            POSTGRES_PASSWORD: ecoride
+        ports:
+            - "5432:5432"
+        volumes:
+            - donnees_postgresql:/var/lib/postgresql/data
 
-  mongodb:
-    image: mongo:7
-    container_name: ecoride_mongodb
-    ports:
-      - "27018:27017"
-    volumes:
-      - donnees_mongodb:/data/db
+    mongodb:
+        image: mongo:7
+        container_name: ecoride_mongodb
+        ports:
+            - "27018:27017"
+        volumes:
+            - donnees_mongodb:/data/db
 
 volumes:
-  donnees_postgresql:
-  donnees_mongodb:
+    donnees_postgresql:
+    donnees_mongodb:
