--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,5 +7,10 @@
 # To list all registered routes, run the following command:
 #   bin/console debug:router
 
+# yaml-language-server: $schema=../vendor/symfony/routing/Loader/schema/routing.schema.json
+
 controllers:
-    resource: routing.controllers
+    resource:
+        path: ../src/Controller/
+        namespace: App\Controller
+    type: attribute
