--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-
 ###> symfony/framework-bundle ###
 .env
-.env .dev
+.env.*
+!.env.exemple
+!.env.dev.exemple
+!.env.docker.exemple
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -10,3 +12,5 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+
