Stabilise l’environnement Docker et l’accès MongoDB (Composer et variables)

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,14 @@
-
+APP_ENV=dev
+APP_DEBUG=1
 ###> symfony/framework-bundle ###
 APP_SECRET=4b56d4e3c80289b20e00b609df0c8fc4
 ###< symfony/framework-bundle ###
+APP_TIMEZONE=Europe/Paris
+
+DEFAULT_URI=http://localhost:8080
+
+DATABASE_URL="pgsql://ecoride:ecoride@postgresql:5432/ecoride"
+
+MONGO_URI=mongodb://mongodb:27017
+MONGO_DB=ecoride_journal
+MONGO_COLLECTION=journal_evenements
