--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,18 @@ services:
       - ./:/var/www/html
     env_file:
       - .env.dev
+    environment:
+      COMPOSER_HOME: /tmp/composer
     user: "${UID}:${GID}"
     depends_on:
       - postgresql
       - mongodb
 
   postgresql:
-    image: postgres:16-alpine
+    image: postgres:16
     container_name: ecoride_postgresql
-    environment:
-      POSTGRES_DB: ecoride
-      POSTGRES_USER: ecoride
-      POSTGRES_PASSWORD: ecoride
+    env_file:
+      - .env.dev
     ports:
       - "5432:5432"
     volumes:
@@ -48,3 +48,4 @@ services:
 volumes:
   donnees_postgresql:
   donnees_mongodb:
+
