--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 # Outils locaux (à ne pas versionner)
 .php-cs-fixer.cache
 .vscode/
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
