--- a/composer.json
+++ b/composer.json
@@ -67,5 +67,8 @@
             "allow-contrib": false,
             "require": "7.4.*"
         }
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.94"
     }
 }
