--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,13 +5,55 @@ server {
     root /var/www/html/public;
     index index.php;
 
+    # En-têtes de sécurité (safe par défaut)
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "DENY" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+
+    # 1) Pare-chocs : évite les 413 liés aux en-têtes/cookies (sessions, etc.)
+    large_client_header_buffers 4 16k;
+    client_header_buffer_size 16k;
+
+    # 2) Uploads : utile si tu ajoutes une photo de profil plus tard
+    client_max_body_size 10m;
+
+    # 3) Symfony : routeur front controller
     location / {
         try_files $uri /index.php$is_args$args;
     }
 
-    location ~ \.php$ {
+    # 4) Exécuter PHP uniquement via index.php (sécurité + évite des comportements bizarres)
+    location ~ ^/index\.php(/|$) {
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+
         fastcgi_pass php:9000;
+
+        # Robustesse : si PHP met un peu de temps (DB, etc.)
+        fastcgi_read_timeout 60;
+
+        internal;
+    }
+
+    # 5) Bloquer l’accès direct aux autres fichiers .php
+    location ~ \.php$ {
+        return 404;
+    }
+
+    # 6) Sécurité : fichiers cachés (.env, .git, etc.)
+    location ~ /\.(?!well-known) {
+        deny all;
+    }
+
+    # 7) Performance : cache des assets statiques
+    location ~* \.(?:css|js|map|jpg|jpeg|png|gif|svg|webp|ico|ttf|otf|woff|woff2)$ {
+        expires 7d;
+        access_log off;
+        add_header Cache-Control "public";
+        try_files $uri =404;
     }
 }
+
