Retire .env.dev du dépôt et ignore les fichiers d'environnement

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@
 
 # Environnement production (local uniquement)
 .env.prod
+
+# Fichiers d'environnement (local)
+.env.dev
+.env.prod
+.env.docker
